# BlockBreaker3000

./: .gitignore  CMakeLists.txt  README.md  run_built.py  run_built.sh
Documentation/: BlockBreaker3000_documentation.md
src/: BlockBreaker3000.cpp  CMakeLists.txt  ball.cpp  ball.hpp  block.cpp  block.hpp  block_blue.cpp  block_blue.hpp  block_orange.cpp  block_yellow.hpp  common.hpp  game.cpp  game.hpp  game_object.hpp  main.cpp  mode.cpp  mode.hpp  move.cpp  move.hpp  paddle.cpp  paddle.hpp  powerup.cpp  powerup.hpp  states.cpp  states.hpp
src/ball/: CMakeLists.txt  ball.cpp  ball.hpp
src/block/: CMakeLists.txt  block.cpp  block.hpp  block_blue.cpp  block_blue.hpp  block_brown.cpp  block_brown.hpp  block_orange.cpp  block_orange.hpp  block_yellow.cpp
src/game/: CMakeLists.txt  game.cpp  game.hpp
src/interface_classes/: CMakeLists.txt  game_object.hpp
src/paddle/: CMakeLists.txt  paddle.cpp  paddle.hpp
src/physic_of_object/: CMakeLists.txt  physic_of_object.cpp  physic_of_object.hpp
src/powerup/: CMakeLists.txt  powerup.cpp  powerup.hpp
unit_tests/: CMakeLists.txt  tests.cpp
